--- a/Api_TrabajoFidelitas/Api_TrabajoFidelitas/Api_TrabajoFidelitas.csproj
+++ b/Api_TrabajoFidelitas/Api_TrabajoFidelitas/Api_TrabajoFidelitas.csproj
@@ -156,7 +156,9 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Entidades\Usuario.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
