--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Web.config
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Web.config
@@ -9,7 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	  <add key="urlWebApi" value="true" />
+	  <add key="urlWebApi" value="https://localhost:44305/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
