--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Web_TrabajoFidelitas.csproj
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Web_TrabajoFidelitas.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Controllers\AutomovilController.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Entidades\Confirmacion.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -601,8 +602,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Usuario\IniciarSesion.cshtml" />
     <Content Include="Views\Shared\_LayoutExterno.cshtml" />
