--- a/Api_TrabajoFidelitas/Api_TrabajoFidelitas/Web.config
+++ b/Api_TrabajoFidelitas/Api_TrabajoFidelitas/Web.config
@@ -69,8 +69,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="MotoresBritanicosEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-EFJJ1375;initial catalog=MotoresBritanicos;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+ <add name="MotoresBritanicosEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DIANAPC;initial catalog=MotoresBritanicos;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
