--- a/Api_TrabajoFidelitas/Api_TrabajoFidelitas/Web.config
+++ b/Api_TrabajoFidelitas/Api_TrabajoFidelitas/Web.config
@@ -13,6 +13,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="correoElec" value="pruebaUniversidadOu6@outlook.com" />
+	<add key="passElec" value="pruebUniv7856OU*" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
