--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Web_TrabajoFidelitas.csproj
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Web_TrabajoFidelitas.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Controllers\AutomovilController.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Entidades\Auditoria.cs" />
     <Compile Include="Entidades\Automovil.cs" />
     <Compile Include="Entidades\Citas.cs" />
     <Compile Include="Entidades\Cliente.cs" />
@@ -179,6 +180,7 @@
     <Compile Include="Models\ReporteModel.cs" />
     <Compile Include="Models\UsuarioModel.cs" />
     <Compile Include="Models\AuditoriaModel.cs" />
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -588,6 +590,7 @@
     <Content Include="Estilos\assets\vendor\tinymce\license.md" />
     <Content Include="Estilos\assets\vendor\tinymce\package.json" />
     <Content Include="Estilos\assets\vendor\tinymce\README.md" />
+    <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -630,9 +633,12 @@
     <Content Include="Views\Usuario\MostrarCitaUsuario.cshtml" />
     <Content Include="Views\Usuario\RecuperarAcceso.cshtml" />
     <Content Include="Views\Cita\Calendario.cshtml" />
+    <Content Include="Views\Auditoria\MostrarAuditoria.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="bin\" />
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
